--- a/src/components/Flex/Flex.module.scss
+++ b/src/components/Flex/Flex.module.scss
@@ -1,5 +1,6 @@
-.flex{
-    width: 90%;
-    margin: auto;
-    background-color: pink;
+.flex {
+  width: 90%;
+  margin: auto;
+  background-color: pink;
+  flex-direction: column-reverse;
 }
