Add cw 14.02.23 part 1

--- a/src/common/styles/_template.scss
+++ b/src/common/styles/_template.scss
@@ -10,3 +10,13 @@
   justify-content: center;
   align-items: center;
 }
+
+%light{
+  background-color: white;
+  color: #222;
+}
+
+%dark{
+  background-color: #222;
+  color: white;
+}
