--- a/src/components/Tree/UserProfile/UserProfile.module.scss
+++ b/src/components/Tree/UserProfile/UserProfile.module.scss
@@ -1,7 +1,13 @@
-@use '/src/common/styles/colors' as *;
+@use "/src/common/styles/template" as *;
 
-.article{
-    padding: 10px;
-    background-color: $color-main;
-    color: $color-text;
+.article {
+  padding: 10px;
+}
+
+.light {
+  @extend %light;
+}
+
+.dark {
+  @extend %dark;
 }
